# solvent

./: .gitignore  MANIFEST.in  Makefile  README.md  artifacts.yaml  bash.completion.sh  requirements.txt  setup.cfg  setup.py  solvent.conf  solvent.sh  upseto.manifest
sh/: solvent
solvent/: approve.py  bring.py  cheating.py  checkrequirements.py  commonmistakes.py  config.py  fulfillrequirements.py  label.py  labelexists.py  localize.py  main.py  manifest.py  requirementlabel.py  run.py  submit.py  submitbuild.py  thisprojectlabel.py  unsubmit.py
tests/: gitwrapper.py  osmosiswrapper.py  solventwrapper.py  test.py
