[metadata]
name = solvent
author = Shlomo Matichin
author-email = shlomi@stratoscale.com
summary = Split your projects across git repos without the disatvantages of git submodule
description-file = README.md
home-page = https://github.com/stratoscale/solvent
license = TBD
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Stratoscale
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Linux
    Programming Language :: Python
keywords =
    git
    repos
    repositories
    python
    scm
    buildproducts
    build
    products
[files]
packages =
    solvent
data_files =
    etc = 
        conf/solvent.conf
    bin/bash_completion.d =
        conf/bash_completion.d/solvent.sh
[entry_points]
console_scripts =
    solvent = solvent.main:main
